# FinanceFlow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt  run_aiml.py  start-ui.bat  start-ui.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
aiml/: finance.aiml
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BudgetSection.jsx  Dashboard.jsx  DebtsSection.jsx  ExpensesSection.jsx  GoalsSection.jsx  NLPExpenseEntry.jsx
frontend/src/utils/: currency.js
ml/: expense_categorizer.py  nlp_expense_parser.py
src/pfa/: aiml_bot.py  assistant.py  db.py  export.py  parsers.py
tests/: test_assistant.py  test_export.py  test_parsers.py  test_validation.py
